<resources>
    <string name="app_name">restbox</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_employee_list">EmployeeListActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="button">Button</string>
    <string name="juridische_informatie">Juridische informatie</string>
    <string name="stel_manager_in">Stel manager in</string>
    <string name="exporteer_verklaringen">Exporteer verklaringen</string>
    <string name="personeels_lijst">Personeels lijst</string>
    <string name="name">Name</string>
    <string name="voorletters_achternaam">Voorletters, Achternaam</string>
    <string name="textview">TextView</string>
    <string name="jaar">Jaar</string>
    <string name="geboortedatum">Geboortedatum</string>
    <string name="dag">Dag</string>
    <string name="maand">Maand</string>
    <string name="functieprofiel">Functieprofiel</string>
    <string name="persoon_toevoegen">Persoon toevoegen</string>
    <string name="toevoegen">Toevoegen</string>
    <string name="function">function</string>
    <string name="addnewperson">AddNewPerson</string>
    <string name="search">search</string>
    <string name="more">more</string>
    <string name="todo">TODO</string>
    <string name="exporteer">Exporteer</string>
    <string name="werkdag_datum">Werkdag (Datum)</string>
    <string name="exporteren">Exporteren</string>
    <string name="shift_instellingen">Shift instellingen</string>
    <string name="exporteerlijst">Exporteerlijst</string>
    <string name="manager">Manager</string>
</resources>