<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterPersonActivity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="322dp"
        android:layout_height="45dp"
        android:layout_marginTop="52dp"
        android:text="@string/shift_instellingen"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/managers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.449"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.031" />

    <Button
        android:id="@+id/exporteerbutton"
        android:layout_width="329dp"
        android:layout_height="48dp"
        android:layout_marginBottom="120dp"
        android:text="@string/exporteren"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/werkmaand"
        android:layout_width="141dp"
        android:layout_height="42dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="332dp"
        app:layout_constraintBottom_toTopOf="@+id/exporteerbutton"
        app:layout_constraintStart_toEndOf="@+id/werkdag" />

    <Spinner
        android:id="@+id/werkjaar"
        android:layout_width="104dp"
        android:layout_height="41dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        app:layout_constraintBottom_toTopOf="@+id/exporteerbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toEndOf="@+id/werkmaand"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/dag"
        app:layout_constraintBottom_toTopOf="@+id/werkdag"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.412"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginBottom="4dp"
        android:text="@string/maand"
        app:layout_constraintBottom_toTopOf="@+id/werkmaand"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/werkmaand" />

    <Spinner
        android:id="@+id/werkdag"
        android:layout_width="78dp"
        android:layout_height="42dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="332dp"
        app:layout_constraintBottom_toTopOf="@+id/exporteerbutton"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/werkdag_datum"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="4dp"
        android:text="@string/jaar"
        app:layout_constraintBottom_toTopOf="@+id/werkjaar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/werkjaar" />

    <Spinner
        android:id="@+id/managers"
        android:layout_width="304dp"
        android:layout_height="33dp"
        android:layout_marginBottom="88dp"
        app:layout_constraintBottom_toTopOf="@+id/werkmaand"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.383"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manager"
        app:layout_constraintBottom_toTopOf="@+id/managers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="1.0" />

    <include
        android:id="@+id/include2"
        layout="@layout/export_listview"
        android:layout_width="330dp"
        android:layout_height="208dp"
        app:layout_constraintBottom_toTopOf="@+id/exporteerbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/werkmaand" />

    <TextView
        android:id="@+id/Exporteerlijst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exporteerlijst"
        app:layout_constraintBottom_toTopOf="@+id/include2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/werkmaand"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>