<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterPersonActivity">

    <EditText
        android:id="@+id/Naam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.223"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/voorletters_achternaam"
        app:layout_constraintBottom_toTopOf="@+id/Naam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Naam"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Spinner
        android:id="@+id/functieprofiel"
        android:layout_width="225dp"
        android:layout_height="49dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.241"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.592" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/functieprofiel"
        app:layout_constraintBottom_toTopOf="@+id/functieprofiel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/functieprofiel"
        app:layout_constraintVertical_bias="1.0" />

    <Spinner
        android:id="@+id/dag"
        android:layout_width="78dp"
        android:layout_height="42dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="68dp"
        app:layout_constraintBottom_toTopOf="@+id/functieprofiel"
        app:layout_constraintHorizontal_bias="0.826"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Naam"
        app:layout_constraintVertical_bias="0.246" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/geboortedatum"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Naam"
        app:layout_constraintVertical_bias="0.765" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dag"
        app:layout_constraintBottom_toTopOf="@+id/dag"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Naam"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:text="@string/maand"
        app:layout_constraintBottom_toTopOf="@+id/maand"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/maand"
        app:layout_constraintTop_toBottomOf="@+id/Naam"
        app:layout_constraintVertical_bias="0.9" />

    <Spinner
        android:id="@+id/maand"
        android:layout_width="141dp"
        android:layout_height="42dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="68dp"
        app:layout_constraintBottom_toTopOf="@+id/functieprofiel"
        app:layout_constraintStart_toEndOf="@+id/dag"
        app:layout_constraintTop_toBottomOf="@+id/Naam"
        app:layout_constraintVertical_bias="0.246" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/jaar"
        app:layout_constraintBottom_toTopOf="@+id/jaar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/jaar"
        app:layout_constraintTop_toBottomOf="@+id/Naam"
        app:layout_constraintVertical_bias="0.985" />

    <Spinner
        android:id="@+id/jaar"
        android:layout_width="104dp"
        android:layout_height="41dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        app:layout_constraintBottom_toTopOf="@+id/functieprofiel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toEndOf="@+id/maand"
        app:layout_constraintTop_toBottomOf="@+id/Naam"
        app:layout_constraintVertical_bias="0.242" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="322dp"
        android:layout_height="45dp"
        android:text="@string/persoon_toevoegen"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/Naam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/toevoegenbutton"
        android:layout_width="329dp"
        android:layout_height="48dp"
        android:text="@string/toevoegen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mTel"
        app:layout_constraintVertical_bias="0.245" />

    <EditText
        android:id="@+id/mTel"
        android:layout_width="325dp"
        android:layout_height="44dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/functieprofiel"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/textviewTel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Telefoonnummer"
        app:layout_constraintBottom_toTopOf="@+id/mTel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/functieprofiel"
        app:layout_constraintVertical_bias="1.0"
        tools:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>